# TCC

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cpp  Config.h  Coord.cpp  Coord.h  IGMN_mock.h  Makefile  MockUps.cpp  MockUps.h  PointsGenerator.cpp  PointsGenerator.h  Simulator.cpp  Simulator.h  Tools.h  complete.json  main.cpp  timed.json
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/GeneticAI/: subdir.mk
Debug/IGMN/: subdir.mk
Debug/NeuralNetwork/: subdir.mk
IGMN/: igmn.cpp  igmn.h  statistic.cpp
art2/: README
art2/1/: ART2.inp  COMPILING  Makefile  README  art2.c  art2.h  art2.n  in_vec.c  in_vec.h  p1.inp  p2.inp  p3.inp  p4.inp  rk4d.c  rk4d.h  std_fun.c  std_fun.h
art2/2/: COMPILATION  README  art2.c  datafile
